Sat Mar  7 17:35:53 1998  Lars Magne Ingebrigtsen  <larsi@menja.ifi.uio.no>

	* gnus.el: Quassia Gnus v0.36 is released.

Sat Mar  7 17:29:20 1998  Lars Magne Ingebrigtsen  <larsi@ifi.uio.no>

	* nntp.el (nntp-wait-for): Reversed logic.

Sat Mar  7 17:19:04 1998  Lars Magne Ingebrigtsen  <larsi@menja.ifi.uio.no>

	* gnus.el: Quassia Gnus v0.35 is released.

Sat Mar  7 15:01:57 1998  Lars Magne Ingebrigtsen  <larsi@ifi.uio.no>

	* gnus-picon.el (gnus-picons-x-face-sentinel): Check whether
	gnus-picons-x-face-file-name exists.

	* gnus-art.el (gnus-article-read-summary-keys): Move window point
	in the summary buffer.

	* nndoc.el (nndoc-type-alist): Allow spaces around separator.

	* gnus-sum.el (gnus-summary-edit-parameters): Interactive.

Sat Mar  7 15:00:05 1998  Wes Hardaker  <wjhardaker@ucdavis.edu>

	* gnus-art.el (gnus-article-prepare): Mark articles as
	downloadable. 

Wed Mar  4 22:33:27 1998  Ken Raeburn  <raeburn@cygnus.com>

	* gnus-int.el (gnus-get-function): New version, caches symbol
	names.

Fri Mar  6 01:10:22 1998  Ken Raeburn  <raeburn@cygnus.com>

	* nnml.el (nnml-article-to-file): Build pathname using
	expand-file-name.  (Thanks, Colin Rafferty, for catching
	this.)

Sat Feb 28 23:33:40 1998  Ken Raeburn  <raeburn@cygnus.com>

	* nnml.el (nnml-article-to-file): Don't add extra "/" when
	building pathname.

	* nnheader.el (nnheader-file-to-number): Check value of
	nnheader-numerical-short-files instead of checking if jka-compr is
	loaded.

1998-03-03  Dave Love  <d.love@dl.ac.uk>

	* nnheader.el (nnheader-parse-head): Fix in-reply-to code. Return
	nil consistently if not found.

Sat Mar  7 13:50:44 1998  Lars Magne Ingebrigtsen  <larsi@ifi.uio.no>

	* nntp.el: Check whether the connection died.

1998-03-01  Kim-Minh Kaplan  <KimMinh.Kaplan@utopia.eunet.fr>

	* gnus.texi (Easy Picons): Removed references to
	`gnus-group-display-picons'.
	(Hard Picons): Ditto.

Mon Mar  2 16:17:36 1998  Lars Magne Ingebrigtsen  <larsi@ifi.uio.no>
